namespace Sunnyyssh.ConsoleUI;

public interface IElementContainer
{
    bool Contains(UIElement child);
}