@startuml

abstract UIElement
interface IElementContainer
interface IFocusable
interface IFocusManagerHolder
abstract Wrapper
class Button
class Canvas
class Grid
class StackPanel
class TextBlock
class TextBox
class Table
abstract OptionChooser
abstract Border
abstract WrapperBasedChooser
class RowChooser
abstract OptionElement
abstract StateOptionElement

IFocusable <|- IFocusManagerHolder

UIElement <|.. Wrapper 
IFocusManagerHolder <|. Wrapper
IElementContainer <|. Wrapper

Wrapper <|.. Canvas
Wrapper <|.. Grid
Wrapper <|.. StackPanel

UIElement <|.. Button
IFocusable <|.. Button

UIElement <|.. TextBlock 
UIElement <|.. TextBox
IFocusable <|... TextBox

UIElement <|... Table
IFocusable <|... Table

UIElement <|... OptionChooser
IFocusable <|... OptionChooser

UIElement <|... Border

UIElement <|.... OptionChooser
OptionChooser <|. WrapperBasedChooser
UIElement <|..... OptionElement
OptionChooser *- OptionElement
WrapperBasedChooser *- Wrapper

@enduml